# dsl-research-assistant

./: .gitignore  AcademicMeeting-1.pptx  Emb-benchmark-1.xlsx  LICENSE  README.md  Singularity.def  docker-compose.yml  pyproject.toml
backend/: .dockerignore  dockerfile  pyproject.toml
backend/milvus-docker/: standalone_embed.sh
backend/src/: test.py
backend/src/api/: app.py  models.py
backend/src/api/endpoints/: captions.py  citations.py  continuations.py
backend/src/dsl_research_assistant/: indexer.py
backend/src/dsl_research_assistant/captions/: captioning_POC.ipynb  data_preprocessing.py  image_captioning.py
backend/src/semantic_search/: test.ipynb  utils.py
backend/src/semantic_search/benchmarking/: benchmark_single.py  full_run.sh  summary_analysis.py  utils.py
backend/src/semantic_search/data_retrieval/: retrieve_paper_metadata.py  retrieve_paper_metadata.sh  utils.py
backend/src/semantic_search/dev/: benchmarking_dev.ipynb  embeddings.ipynb  interactive_setup.sh  retrieval_dev.ipynb
backend/src/semantic_search/store/: create_store.py  faiss_store.py  milvus_store.py  utils.py
backend/src/writing_tools/: __init__.py  _base.py
backend/src/writing_tools/experiments/: test_suggestion_generation.py
backend/src/writing_tools/inference_models/: __init__.py  _hf_inference_model.py  _ollama_inference_model.py
backend/src/writing_tools/literature_review_generation/: __init__.py  lexrank_literature_review_generator.py  litllm_literature_review_generator.py
data/main/: metadata.json
dev/: HfAgentsTut.ipynb  docling_playground.ipynb
frontend/research-assistant/: .dockerignore  dockerfile  next.config.mjs  next.config.ts  package-lock.json  package.json
frontend/research-assistant/app/: page.tsx
frontend/research-assistant/components/: caption-panel.tsx  citation-panel.tsx  continuation-panel.tsx  research-assistant.tsx  text-editor.tsx
research-assistant/: dockerfile  package-lock.json  package.json
research-assistant/components/: caption-panel.tsx  citation-panel.tsx  continuation-panel.tsx  research-assistant.tsx
src/: milvus_demo.db
src/dev/: HfAgentsTut.ipynb  docling_playground.ipynb
src/dsl_research_assistant/: citation_retrieval.py  data_preprocessing.py  image_captioning.py  indexer.py
src/semantic_search/: benchmarking_utils.py  create_store.py  misc.py  retrieve_paper_metadata.out  retrieve_paper_metadata.py  semSchol_retrival.py  store.py  test.ipynb  utils.py
src/semantic_search/benchmarking/: benchmark_single.py  full_run.sh  search_profile.prof  utils.py
src/semantic_search/data_retrieval/: retrieve_paper_metadata.out  retrieve_paper_metadata.py  retrieve_paper_metadata.sh  semanticscholar_retrieval.py  utils.py
src/semantic_search/dev/: benchmarking_dev.ipynb  chunk_store.parquet  docling_playground.ipynb  document_store.parquet  embedding_dev.ipynb  embeddings.ipynb  faiss_document_index.faiss  interactive_setup.sh  paper-metadata.csv  retrieval_dev.ipynb  test.faiss  test.py
src/semantic_search/dev/example_data/: Abouee_Weakly_Supervised_End2End_Deep_Visual_Odometry_CVPRW_2024_paper.txt
src/semantic_search/store/: create_store.py  faiss_store.py  milvus_store.py  milvus_test.py  models.py  store.py  utils.py
src/utils/: paper.py
src/writing_tools/: __init__.py  _base.py  data_visualization.ipynb  dataset_creation.py  demo.py  test.py  test2.py
src/writing_tools/experiments/: test_literature_review_generation.py  test_suggestion_generation.py
src/writing_tools/inference_models/: __init__.py  _hf_inference_model.py  _ollama_inference_model.py  _openai_inference_model.py
src/writing_tools/literature_review_generation/: __init__.py  lexrank_literature_review_generator.py  litllm_literature_review_generator.py  simple_literature_review_generator.py
src/writing_tools/suggestion_generation/: __init__.py  simple_suggestion_generator.py  summary_suggestion_generator.py
