[project]
name = "dsl-research-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "Niko Covic",email = "niko.covic@gmail.com"},
    {name = "Gabrijel Radovcic"},
    {name = "Luis Carratero Lopez"}
]
readme = "README.md"
requires-python = "<4.0,>=3.10"
dependencies = [
    "docling (>=2.28.1,<3.0.0)",
    "smolagents (>=1.12.0,<2.0.0)",
    "lexrank (>=0.1.0,<0.2.0)",
    "rouge-score (>=0.1.2,<0.2.0)",
    "torch (>=2.7.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "dsl_research_assistant", from = "src"}]


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch"}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
