[tool.poetry]
name = "dsl-research-assistant"
version = "0.1.0"
description = ""
authors = [
    "Niko Covic <niko.covic@gmail.com>",
    "Gabrijel Radovcic <gradovcic@ethz.ch>",
    "Luis Carratero Lopez <lcarretero@ethz.ch>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
docling = ">=2.28.1,<3.0.0"
smolagents = ">=1.12.0,<2.0.0"
llama-index = "^0.12.26"
pyarrow = "^19.0.1"
numpy = ">=1.24.4,<2.0.0"
pyalex = "^0.18"
semanticscholar = "^0.10.0"
snakeviz = "^2.2.2"
faiss-cpu = "^1.11.0"
rank-bm25 = "^0.2.2"
pymilvus = "^2.5.8"
matplotlib = "^3.10.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
tqdm = "^4.67.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
