[tool.poetry]
name = "dsl-research-assistant"
version = "0.1.0"
description = ""
authors = [
    "Niko Covic <niko.covic@gmail.com>",
    "Gabrijel Radovcic <gradovcic@ethz.ch>",
    "Luis Carratero Lopez <lcarretero@ethz.ch>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^2.2.5"
pandas = "^2.2.3"
rank-bm25 = "^0.2.2"
pymilvus = "^2.5.8"
matplotlib = "^3.10.3"
pyalex = "^0.18"
semanticscholar = "^0.10.0"
transformers = "^4.51.3"
torch = "^2.7.0"
pyarrow = "^20.0.0"
faiss-cpu = "^1.11.0"
tqdm = "^4.67.1"
scikit-learn = "^1.6.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
tqdm = "^4.67.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
