[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = [
    "Niko Covic <niko.covic@gmail.com>",
    "Gabrijel Radovcic <gradovcic@ethz.ch>",
    "Luis Carratero Lopez <lcarretero@ethz.ch>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
smolagents = ">=1.12.0,<2.0.0"
llama-index = "^0.12.26"
faiss-cpu = "^1.10.0"
pyarrow = "^19.0.1"
numpy = ">=1.24.4,<2.0.0"
pyalex = "^0.18"
semanticscholar = "^0.10.0"
evaluate = "^0.4.3"
torch = {version = "^2.5.1", source = "pytorch-cu121"}
torchaudio = {version = "^2.5.1", source = "pytorch-cu121"}
torchvision = {version = "^0.20.1", source = "pytorch-cu121"}
docling = "^2.29.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
python-multipart = "^0.0.20"
pydantic = "^2.11.4"
docling-core = "^2.29.0"
dotenv = "^0.9.9"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
tqdm = "^4.67.1"

[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
